# SongRec

./: .gitignore  Cargo.toml  Dockerfile
.github/workflows/: docker.yml
chartex-radio/: .gitignore  Cargo.toml  log4rs.yml
chartex-radio/src/: main.rs
radio-server/: Cargo.toml  Dockerfile  config.toml  docker-compose.yml
radio-server/src/: auth.rs  docker.rs  error.rs  main.rs
src/: lib.rs  main.rs
src/fingerprinting/: communication.rs
