[package]
name = "chartex-radio"
version = "0.1.0"
authors = ["Orhun Parmaksız <orhunparmaksiz@gmail.com>"]
edition = "2021"

[dependencies]
anyhow = "1.0.68"
reqwest = { version = "0.11.13", features = ["stream"] }
futures-util = "0.3.25"
tokio = { version = "1.24.2", default-features = false, features = ["macros", "rt-multi-thread"] }
serde_json = "1.0.91"
argh = "0.1.10"

[dependencies.songrec]
path = "../."
default-features = false
