[package]
name = "chartex-radio"
version = "0.1.0"
authors = ["Orhun Parmaksız <orhunparmaksiz@gmail.com>"]
edition = "2021"

[dependencies]
anyhow = "1.0.69"
reqwest = { version = "0.11.14", features = ["stream", "json"] }
futures-util = "0.3.26"
tokio = { version = "1.25.0", default-features = false, features = [
  "macros",
  "rt-multi-thread",
] }
serde_json = "1.0.92"
argh = "0.1.10"
chrono = "0.4.23"
log4rs = "1.2.0"
log = "0.4.17"
m3u8-rs = "5.0.4"
url = "2.4.0"

[dependencies.songrec]
path = "../."
default-features = false
