[package]
name = "radio-server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
axum = "0.6.20"
axum-auth = { version = "0.4.0", default-features = false, features = [
  "auth-bearer",
] }
axum-macros = "0.3.8"
dotenvy = "0.15.7"
duct = "0.13.6"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
tokio = { version = "1.32.0", features = ["full"] }
toml = "0.8.0"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
